# Lumina

./: .gitignore  .pyrefly.toml  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  hardhat.config.js  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/: .venv  celery_worker.py  config.py  database.py  main.py  nixpacks.toml  run.sh  tasks.py
backend/models/: models.py
backend/pipeline/: __init__.py  deploy_gate.py  risk_engine.py  sanitizer.py
backend/routes/: api.py  auth.py  contracts.py  tasks.py
backend/services/: ai_service.py  audit_service.py  blockchain_service.py  compiler_service.py  contract_service.py
backend/utils/: logger.py  security.py
contracts/templates/: DAO.sol  ERC1155.sol  ERC20.sol  ERC721.sol  Staking.sol
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/audit/: page.tsx
frontend/app/builder/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/deploy/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/Editor/: MonacoEditor.tsx
frontend/components/Layout/: Sidebar.tsx
frontend/components/Wallet/: WalletConnect.tsx
frontend/lib/: api.ts  store.ts  wagmi.ts
infra/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
infra/monitoring/: prometheus.yml
nginx/: nginx.prod.conf
scripts/: deploy.js
tests/: conftest.py
tests/contracts/: ERC20.test.js
tests/integration/: test_api.py
tests/unit/: test_services.py
(+2 files in other folders)
